--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 				<article>
 					Заполните, пожалуйста форму с любым Вашим вопросом:
 				</article>
-				<a href="https://goo.gl/forms/jgBVxNZuKYuiuISC2"target="_blank" class="cta">Перейти к Форме Обратной Связи</a>
+				<a href="https://goo.gl/forms/jgBVxNZuKYuiuISC2"target="_blank" class="cta">Связаться</a>
 			</section>
 			<section class="agenda">
 				<img src="./images/Sprites/Agenda_2x.png" width="58" height="58" alt=""/>
