--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 				<div>					
 					<figure>
 						<img src="https://media.licdn.com/dms/image/C5603AQEjiRDpvS9vPw/profile-displayphoto-shrink_800_800/0?e=1535587200&v=beta&t=-FcQKRJRuMGx9fqs8Gc7tos4nSAcKhrq0hAdl6xrMRo" alt="Serhii Kostiushkin" width="175" height="175"/>
-						<figcaption><strong>Architect \ CEO</strong> <a href="">Serhii Kostiushkin</figcaption>
+						<figcaption><strong>Architect \ CEO</strong> Serhii Kostiushkin</figcaption>
 						<span>Основатель, <strong> Старший Эрланг Разработчик</strong></span>
 						<div class="prop_email prop_n">
 							<i class="iconic-mail">&nbsp;</i> <a href="mailto:s.kostyushkin@gmail.comm">Отправить письмо</a>
